# open-ev-data.github.io

./: .gitignore  COMPLIANCE_REVIEW.md  README.md  mkdocs.yml  pyproject.toml  robots.txt  versions.json
.cursor/rules/: base.mdc
.github/workflows/: deploy.yml  release.yml  sync-docs.yml
0.1.x/: 404.html  index.html  sitemap.xml
0.1.x/getting-started/: index.html
1.2.x/: 404.html  index.html  sitemap.xml
1.2.x/api/: index.html
1.2.x/changelog-api/: index.html
1.2.x/changelog-dataset/: index.html
1.2.x/dataset/: index.html
1.2.x/getting-started/: index.html
1.2.x/governance/: index.html
1.2.x/search/: search_index.json
1.3.x/: 404.html  index.html  sitemap.xml
1.3.x/api/: index.html
1.3.x/changelog-api/: index.html
1.3.x/changelog-dataset/: index.html
1.3.x/dataset/: index.html
1.3.x/getting-started/: index.html
1.3.x/governance/: index.html
1.3.x/search/: search_index.json
1.4.x/: 404.html  index.html  sitemap.xml
1.4.x/api/: index.html
1.4.x/changelog-api/: index.html
1.4.x/changelog-dataset/: index.html
1.4.x/changelog-ui/: index.html
1.4.x/dataset/: index.html
1.4.x/getting-started/: index.html
1.4.x/governance/: index.html
1.4.x/search/: search_index.json
1.4.x/ui/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/getting-started/: index.html
dev/search/: search_index.json
docs/: changelog-api.md  changelog-dataset.md  changelog-ui.md  index.md
docs/api/: API_ERRORS.md  ARCHITECTURE.md  CRATE_EV_CORE.md  CRATE_EV_ETL.md  CRATE_EV_SERVER.md  GET_STARTED.md  TESTING.md  (+4 more)
latest/: sitemap.xml
overrides/: main.html
(+128 files in other folders)
