[tool.poetry]
name = "open-ev-data-docs"
version = "0.1.0"
description = "Documentation for OpenEV Data"
authors = ["OpenEV Data Contributors"]
readme = "README.md"
license = "CC-BY-4.0"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
pymdown-extensions = "^10.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-redirects = "^1.2.0"
mike = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

