[tool.poetry]
name = "open-ev-data-docs"
version = "0.1.0"
description = "Documentation for OpenEV Data"
authors = ["OpenEV Data Contributors"]
readme = "README.md"
license = "CC-BY-4.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mkdocs = ">=1.6.0,<2.0.0"
mkdocs-material = ">=9.5.0,<10.0.0"
pymdown-extensions = ">=10.0,<11.0"
mkdocs-minify-plugin = ">=0.8.0,<0.9.0"
mkdocs-redirects = ">=1.2.0,<2.0.0"
mike = ">=2.0.0,<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

